--- a/Topic Modeling.ipynb
+++ b/Topic Modeling.ipynb
@@ -48,26 +48,20 @@
    },
    "cell_type": "code",
    "source": [
-    "# user = 'user'\n",
-    "# password = 'password'\n",
-    "# host = 'host'\n",
-    "# port = 'port'\n",
-    "# service_name ='srvice_name'\n",
-    "# \n",
-    "# dsn = f'oracle+oracledb://{user}:{password}@{host}:{port}/?service_name={service_name}'\n",
-    "# engine = create_engine(dsn)\n",
-    "# \n",
-    "# sql_transaction_image = f\"\"\"\n",
-    "#     SELECT ti.ID ,ti.OCR_TEXT ,t.TERMINAL_ID1\n",
-    "#     FROM \"TRANSACTION\" t \n",
-    "#     JOIN TRANSACTION_IMAGE ti ON t.ID = ti.TRANSACTION_ID \n",
-    "#     JOIN TERMINAL t2 ON t2.ID = t.TERMINAL_ID1 \n",
-    "#     JOIN MERCHANT m ON m.ID = t2.MERCHANT_ID \n",
-    "#     WHERE   ti.TYPE_ID IN (1,2) AND ti.OCR_TEXT IS NOT NULL AND m.STATUS != 'V' \n",
-    "#     ORDER BY ti.ID ASC\n",
-    "# \"\"\"\n",
-    "# with engine.connect() as conn:\n",
-    "#     dataset_main = pd.read_sql(sql=sql_transaction_image, con=conn)\n"
+    "user = 'user'\n",
+    "password = 'password'\n",
+    "host = 'host'\n",
+    "port = 'port'\n",
+    "service_name ='srvice_name'\n",
+    "\n",
+    "dsn = f'oracle+oracledb://{user}:{password}@{host}:{port}/?service_name={service_name}'\n",
+    "engine = create_engine(dsn)\n",
+    "\n",
+    "df = f\"\"\"\n",
+    "    Query\n",
+    "\"\"\"\n",
+    "with engine.connect() as conn:\n",
+    "    df = pd.read_sql(sql=df, con=conn)\n"
    ],
    "id": "fc1ac7a332578bb1",
    "outputs": [
