--- a/Topic Modeling.ipynb
+++ b/Topic Modeling.ipynb
@@ -48,20 +48,20 @@
    },
    "cell_type": "code",
    "source": [
-    "user = 'user'\n",
-    "password = 'password'\n",
-    "host = 'host'\n",
-    "port = 'port'\n",
-    "service_name ='srvice_name'\n",
-    "\n",
-    "dsn = f'oracle+oracledb://{user}:{password}@{host}:{port}/?service_name={service_name}'\n",
-    "engine = create_engine(dsn)\n",
-    "\n",
-    "df = f\"\"\"\n",
-    "    Query\n",
-    "\"\"\"\n",
-    "with engine.connect() as conn:\n",
-    "    df = pd.read_sql(sql=df, con=conn)\n"
+    "# user = 'user'\n",
+    "# password = 'password'\n",
+    "# host = 'host'\n",
+    "# port = 'port'\n",
+    "# service_name ='srvice_name'\n",
+    "# \n",
+    "# dsn = f'oracle+oracledb://{user}:{password}@{host}:{port}/?service_name={service_name}'\n",
+    "# engine = create_engine(dsn)\n",
+    "# \n",
+    "# df = f\"\"\"\n",
+    "#     Query\n",
+    "# \"\"\"\n",
+    "# with engine.connect() as conn:\n",
+    "#     df = pd.read_sql(sql=df, con=conn)\n"
    ],
    "id": "fc1ac7a332578bb1",
    "outputs": [
@@ -329,6 +329,20 @@
     "plt.show()"
    ],
    "id": "faa349f7808d9440"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## LDA",
+   "id": "9d7a9ee7e0da5186"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "274d54049a84f1c5"
   }
  ],
  "metadata": {
